objects/SIGSTR__SigstrEngagement__c.object
<CustomObject>
    <fields>
        <fullName>SIGSTR__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>SigstrEngagements</relationshipLabel>
        <relationshipName>SigstrEngagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIGSTR__Clicks__c</fullName>
        <label>Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIGSTR__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SigstrEngagements</relationshipLabel>
        <relationshipName>SigstrEngagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIGSTR__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>SigstrEngagements</relationshipLabel>
        <relationshipName>SigstrEngagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIGSTR__Sender_Email__c</fullName>
        <label>Sender Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIGSTR__Sigstr_Campaign_Id__c</fullName>
        <label>Sigstr Campaign Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIGSTR__Sigstr_Campaign_Name__c</fullName>
        <label>Sigstr Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIGSTR__Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>SigstrEngagement</label>
    <listViews>
        <fullName>SIGSTR__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SE-{0000000}</displayFormat>
        <label>SigstrEngagement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SigstrEngagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>